# koibumi

./: Cargo.toml  README.md
crates/akarin/: Cargo.toml  build.rs
crates/akarin-cli/: Cargo.toml
crates/akarin/src/: main.rs
crates/build-tools/: Cargo.toml  README.md
crates/koibumi/: Cargo.toml  build.rs
crates/koibumi-cli/: Cargo.toml
crates/koibumi-script/: Cargo.toml
crates/koibumi-script/src/: lib.rs
crates/koibumi/src/: conf.rs  lib.rs  main.rs  script.rs
crates/script-engine/: Cargo.toml
doc/: Engine-Design.md  How-It-Works.md  RenPy-Support.md  Script-Design.md
