[package]
name = "akarin"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Main Game Engine
macroquad = "0.3"

[build-dependencies]
akarin-build-tools = { path = "../build-tools" }
