[package]
name = "koibumi-script"
version = "0.1.0"
edition = "2021"
authors = ["AnErW Huang <anerwben@outlook.com> "]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rhai = "1.3.0"

koibumi = { path = "../koibumi", package = "koibumi" }
[dev-dependencies]
