[package]
name = "koibumi"
version = "0.1.0"
edition = "2021"

# build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# UI
egui = "0.16.1"
egui_wgpu_backend = "0.16.0"
egui_winit_platform = "0.13.0"
epi = "0.16"
wgpu = "0.12.0"

# Log
log = "0.4.14"
pretty_env_logger = "0.4.0"
wasm-logger = "0.2.0"

# Windowing
winit = "0.26"

# Low-Level Requirement
chrono = "0.4"
pollster = "0.2"
egui_demo_lib = "0.16"

# Image Processing
image = "0.24.0"

# Audio
quad-snd = "0.2.3"

[build-dependencies]
koibumi-build-tools = { path = "../build-tools" }
